namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-departments-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-departments-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask_prisoner_facing_services"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-departments-alerts-nonprod"
    cloud-platform.justice.gov.uk/application: "HMPPS Departments"
    cloud-platform.justice.gov.uk/owner: "Prisoner Facing Services: thehub@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-deparments-ui.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-launchpad-devs"
